deploy/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: games-store-service
  name: games-store-service
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: games-store-service
  type: ClusterIP
