deploy/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: games-store-service
spec:
  to:
    kind: Service
    name: games-store-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
